Step4 (#4)
* RoomController and ItemController added

* integration tests for RoomController and ItemController added

* integration tests for RoomController and ItemController added

* build.gradle changes

* path to the JDK in the java toolchain section removed